@@ -2020,3 +2020,4 @@
 ( cvs diff -u -r 1.213.2.123 -r 1.213.2.124 src/folder.c;  cvs diff -u -r 1.87.2.31 -r 1.87.2.32 src/folder.h;  ) > 2.5.6cvs15.patchset
 ( cvs diff -u -r 1.5.10.3 -r 1.5.10.4 COPYING;  ) > 2.5.6cvs16.patchset
 ( cvs diff -u -r 1.3.2.12 -r 1.3.2.13 src/folderutils.c;  ) > 2.5.6cvs17.patchset
+( cvs diff -u -r 1.18.2.16 -r 1.18.2.17 src/jpilot.c;  ) > 2.5.6cvs18.patchset
