@@ -1,3 +1,10 @@
+2006-11-01 [colin]	2.5.6cvs18
+
+	* src/jpilot.c
+		Handle libpisock12 support. Probably
+		fixes bug 1046, 'jpilot AddressDB.pdb 
+		import fail'
+
 2006-11-01 [colin]	2.5.6cvs17
 
 	* src/folderutils.c
